	PR c++/84222 	* cp-tree.h (cp_warn_deprecated_use): Declare. 	* tree.c (cp_warn_deprecated_use): New function. 	* typeck2.c (build_functional_cast): Use it. 	* decl.c (grokparms): Likewise. 	(grokdeclarator): Likewise.  Temporarily push nested class scope 	around grokparms call for out of class member definitions.

* g++.dg/warn/deprecated.C (T::member3): Change dg-warning to dg-bogus.
	* g++.dg/warn/deprecated-6.C (T::member3): Likewise.
	* g++.dg/warn/deprecated-13.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@258568 138bc75d-0d04-0410-961f-82ee72b054a4